[gd_scene load_steps=6 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]
[ext_resource path="res://Fonts/PublicPixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Base_UI_font.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.243137, 0.333333, 0.384314, 1 )
border_color = Color( 1, 0, 0, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=3]
size = 9
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Lobby_interface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Lobby_interface"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.576471, 0.74902, 0.72549, 1 )

[node name="Join_game" type="Button" parent="Lobby_interface"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -25.0
margin_right = 75.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "Join Game"

[node name="Label" type="Label" parent="Lobby_interface"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 31.0
margin_bottom = 45.0
custom_colors/font_color = Color( 0.376471, 0.172549, 0.172549, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
autowrap = true
uppercase = true

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Next_level" type="Button" parent="UI"]
margin_left = 3.0
margin_top = 4.0
margin_right = 87.0
margin_bottom = 24.0
text = "NEXT LEVEL"

[node name="Reset_level" type="Button" parent="UI"]
margin_left = 92.0
margin_top = 4.0
margin_right = 140.0
margin_bottom = 24.0
text = "Reset"

[connection signal="pressed" from="Lobby_interface/Join_game" to="." method="_on_Join_game_pressed"]
[connection signal="pressed" from="UI/Next_level" to="." method="_on_Next_level_pressed"]
[connection signal="pressed" from="UI/Reset_level" to="." method="_on_Reset_level_pressed"]
